--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
   </head>
   <body>
     <div id="app">
-      <div class="card">
-        <label for="k">Enter k (number of rows/columns)</label>
-        <input id="k" value="3" type="number" min="1" max="9" step="1" />
+      <div>
+        <div>
+          <label for="k">Enter k (number of rows/columns)</label>
+          <input id="k" value="3" type="number" min="1" max="9" step="1" />
+        </div>
+        <div>
+          <button id="rnd">draw random</button>
+        </div>
       </div>
       <canvas
         id="canvas"
